--- a/locales/nl.json
+++ b/locales/nl.json
@@ -1,7 +1,7 @@
 {
     "pair": {
         "title": "Voer het IP adres en ID in van de Smile P1:",
-        "sip": "IP addres (bijv. 10.0.0.5)",
-        "sid": "Smile ID (bijv. bcdfghjk)"
+        "sip": "IP addres (0.0.0.0)",
+        "sid": "Smile ID (bcdfghjk)"
       }
 }
