--- a/locales/en.json
+++ b/locales/en.json
@@ -9,10 +9,21 @@
 		"success": "Success!"
 	},
 	"settings": {
-		"app": {
-			"title": "Plugwise Smile P1 Debug Logs",
+		"benefit": "Integrate Plugwise Smile P1 energy meter",
+		"tab1": {
+			"title": "Instructions",
+			"addDeviceTitle": "Add a new device",
+			"addDeviceInstructions": "Add a new device via the Homey tab `Devices`. On request enter the fixed IP address and Smile ID. The ID can be found printed on the device, or can be found in the original app from Plugwise. The polling interval can be changed in the device settings.",
+			"ledringTitle": "Enable LED ring",
+			"ledringInstructions": "The Homey LED ring can show you how much energy you are using and producing. Go to the Homey settings `LED Ring` and select the `Plugwise Smile P1 Power` screensaver."
+		},
+		"tab2": {
+			"title": "Debug Logs",
 			"logs": "Logs",
-			"getlogs": "Refresh logs"
+			"deletelogs": "Delete logs",
+			"updateLogs": "Refresh logs",
+			"deleteWarning": "Delete all logs?",
+			"deleted": "Logs deleted!"
 		}
 	}
 }
