--- a/locales/nl.json
+++ b/locales/nl.json
@@ -1,7 +1,7 @@
 {
 	"pair": {
 		"title": "Toevoegen Smile P1",
-		"instructions": "Geef het the IP adres en het ID van de Smile P1. De-select any meters that you do not need. The main power is always included. Note: It is not possible to add meters afterwards without deleting the device first!",
+		"instructions": "Voer het vaste IP adres en de ID in van de Smile P1. De-selecteer de meters die je niet nodig hebt. De hoofd-stroommeter wordt altijd weergegeven. Let op: Het is niet mogelijk om meters later toe te voegen zonder het apparaat eerst te verwijderen!",
 		"includeMeters": "Meters weergeven",
 		"includeProduction": "Stroom teruglevering",
 		"includeOffPeak": "Dal tarief",
