--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 
+v3.0.1  2019.06.14 SmileP1 package v 1.0.7. getMeterReadings optimized for V2 firmware. Meters accuracy extended to max 4 decimals.
 v3.0.0  2019.06.12 SmileP1 package v 1.0.6. Select power meters during pair. Support added for Smile P1 firmware V3.
 v2.2.0  2019.02.03 Fix ledring Homey V2. App settings page optimized for V2 mobile.
 v2.1.0	2019.01.26 Homey V2 icons and insights. Ledring fix. Memory optimizations. New forum link.
