--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 
+v3.0.2  2019.07.21 SmileP1 package v 1.1.0. Bugfixes and optimizations.
 v3.0.1  2019.06.14 SmileP1 package v 1.0.7. getMeterReadings optimized for V2 firmware. Meters accuracy extended to max 4 decimals.
 v3.0.0  2019.06.12 SmileP1 package v 1.0.6. Select power meters during pair. Support added for Smile P1 firmware V3.
 v2.2.0  2019.02.03 Fix ledring Homey V2. App settings page optimized for V2 mobile.
