--- a/locales/nl.json
+++ b/locales/nl.json
@@ -1,14 +1,14 @@
 {
 	"pair": {
 		"title": "Toevoegen Smile P1",
-		"instructions": "Voer het vaste IP adres en de ID in van de Smile P1. De-selecteer de meters die je niet nodig hebt. De hoofd-stroommeter wordt altijd weergegeven. Let op: Het is niet mogelijk om meters later toe te voegen zonder het apparaat eerst te verwijderen!",
+		"instructions": "Voer het ID in van de Smile P1. Als je geen IP adres invult zal Homey auto-discovery proberen. De-selecteer de meters die je niet nodig hebt. De hoofd-stroommeter wordt altijd weergegeven. Let op: Het is niet mogelijk om meters later toe te voegen zonder het apparaat eerst te verwijderen!",
 		"includeMeters": "Meters weergeven",
 		"includeProduction": "Stroom teruglevering",
 		"includeOffPeak": "Dal tarief",
 		"includeGas": "Gas",
 		"host": "IP adres",
 		"password": "Smile ID",
-		"required": "Het IP adres en Smile ID moeten worden ingevuld",
+		"required": "Het Smile ID moet worden ingevuld",
 		"testSettings": "Opslaan",
 		"success": "Succes!"
   },
@@ -17,7 +17,7 @@
 		"tab1": {
 			"title": "Instructies",
 			"addDeviceTitle": "Koppel nieuw apparaat",
-			"addDeviceInstructions": "Voeg een nieuw apparaat toe via de Homey tab `Apparaten`. Voer het vaste IP addres en Smile ID in. De ID staat geprint op het apparaat, of kan in de originele Plugwise app worden gevonden. De polling snelheid kan worden aangepast in de apparaat instellingen.",
+			"addDeviceInstructions": "Voeg een nieuw apparaat toe via de Homey tab `Apparaten`. Voer het Smile ID in. De ID staat geprint op het apparaat, of kan in de originele Plugwise app worden gevonden. Als je geen IP adres invult zal Homey auto-discovery proberen. De polling snelheid kan worden aangepast in de apparaat instellingen.",
 			"ledringTitle": "LED ring aanzetten",
 			"ledringInstructions": "De Homey LED ring kan je laten zien hoeveel energie je gebruikt en produceert. Ga naar de Homey instellingen `LED Ring` en selecteer `Plugwise Smile P1 Energie` als screensaver."
 		},
