--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+v3.0.6  2020.05.17 SmileP1 package v 1.4.0. Updated icons and improved pairing screen.
 v3.0.5  2019.09.11 SmileP1 package v 1.3.0. Added Energy support for Homey V3.
 v3.0.4  2019.08.24 SmileP1 package v 1.2.0. Added autodiscover during pairing. Gas usage fix.
 v3.0.3  2019.07.26 Ledring production fix.
