--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+v4.0.0  2021.11.23 Rewrite to SDK3 and Homey Compose. Fixed offPeak state after app restart. Fixed several 0-value bugs. Http timeout depending on poll time. package Smilep1@1.5.0. Ledring code updated. NL readme added.
 v3.1.0  2020.10.07 Fix Homey V5 compatibility.
 v3.0.6  2020.05.17 SmileP1 package v 1.4.0. Updated icons and improved pairing screen.
 v3.0.5  2019.09.11 SmileP1 package v 1.3.0. Added Energy support for Homey V3.
