--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+v4.2.0  2021.12.16 Fix tariff change flow trigger. Added filter unrealistic values option.
 v4.1.0  2021.12.08 Added support for Belgian P1 (reversed peak-offPeak). smilep1@1.6.1.
 v4.0.0  2021.11.23 Rewrite to SDK3 and Homey Compose. Fixed offPeak state after app restart. Fixed several 0-value bugs. Http timeout depending on poll time. package Smilep1@1.5.0. Ledring code updated. NL readme added.
 v3.1.0  2020.10.07 Fix Homey V5 compatibility.
