--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+v4.2.3  2023.02.12 Disabled Ledring on HP2023. Smilep1@1.6.2.
 v4.2.2  2022.02.13 Changed internal FLOW code. Fix flow AND card for tariff sometimes incorrect.
 v4.2.1  2022.01.12 Fix flow start before capabilities update. Log tarrif change.
 v4.2.0  2021.12.16 Fix tariff change flow trigger. Added filter unrealistic values option.
